# esphome-m5stack-atom-barcode-scanner

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  CODEOWNERS  LICENSE  README.md  dummy_config.yaml  firmware.yaml  pyproject.toml  requirements-dev.txt  ruff.toml  secrets.yaml.example
.github/: BRANCHING_AND_RELEASES.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  OTA_UPDATES_GUIDE.md  PRERELEASE_AND_OTA.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  dependabot-uv-lockfile.yml  lint.yml  pr-firmware.yml  pre-commit-autoupdate.yml  release.yml  test.yml
components/m5stack_barcode/: README.md  __init__.py  actions.cpp  actions.cpp.orig  actions.h  actions_impl.h  command.cpp  command.h  command_handlers.cpp  command_handlers.h  commands.cpp  commands.h  index.rst  m5stack_barcode.cpp  m5stack_barcode.h  types.cpp  types.h
firmware/: atom_lite.yaml  core.yaml  secrets.yaml.example
manifests/: atom_lite.json
tests/: __init__.py  conftest.py  test_m5stack_barcode_all_entities.yaml  test_m5stack_barcode_minimal.yaml
