[project]
name = "esphome-m5stack-atom-barcode-scanner"
version = "0.1.0"
description = "ESPHome external component for the M5Stack Atom QR Code Scanner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esphome==2026.4.0",
    "fatfs-ng>=0.1.15",
    "littlefs-python>=0.17.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
    "yamllint>=1.38.0",
]
