[project]
name = "esphome-m5stack-atom-barcode-scanner"
version = "0.1.0"
description = "ESPHome external component for the M5Stack Atom QR Code Scanner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esphome==2026.4.0",
    "fatfs-ng>=0.1.15",
    "littlefs-python>=0.17.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.15.11",
    "yamllint>=1.38.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstring style conflicts — pick D211/D213 variants
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    # Annotation flexibility — Any is used extensively in ESPHome codegen helpers
    "ANN401",
    # subprocess with a fixed list is not untrusted input (test runner only)
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"components/m5stack_barcode/__init__.py" = [
    "ANN401",
]
